--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="card_color3"></div>
         </div>
         <div class="card_product-name">
-            <p>Tralalelo tralala (Edicion exclusiva)</p>
+            <p>Tralalelo tralala (Edicion Sahur)</p>
         </div>
         <div class="card_price">
             <p>Precio: 50 lucas</p>
