Span de price-text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Tralalelo tralala (Edicion Sahur)</p>
         </div>
         <div class="card_price">
-            <p>Precio: 50 lucas</p>
+            <p>Precio: <span class="price-text">50</span> lucas</p>
         </div>
         <div class="card_add-to-cart">
             <button class="btn">Añadir a carrito</button>
