--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </a>
         </div>
         <div class="card_colors">
-            <div class="card_color1"></div>
-            <div class="card_color2"></div>
-            <div class="card_color3"></div>
+            <div class="card-color color1"></div>
+            <div class="card-color color2"></div>
+            <div class="card-color color3"></div>
         </div>
         <div class="card_product-name">
             <p>Tralalelo tralala (Edicion Sahur)</p>
