--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="card_container">
         <div class="card_header">
             <a href="./Carrito" target="_blank">
-                <!-- El shooping_bag es un "icono", pero se escribe en texto -->
+                <!-- El shooping_bag es un "icono", pero se escribe en texto, la fuente cambia la palabra por el icono. -->
                 <div class="material-symbols-outlined">
                     shopping_bag
                 </div>
